--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,3 +33,179 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import 'neat/neat';
 
 @import 'base/base';
+
+/* 
+Main
+ */
+ .content-area{
+ 	max-width: 1024px;
+ 	margin: 0 $golden*1em;
+ 	@include media($large-screen) {
+ 		margin: 0 auto;
+ 	}
+ }
+/* 
+Header Section
+ */
+ .navigation {
+ 	$large-screen: em(860) !default;
+ 	$large-screen: $large-screen;
+ 	padding: $golden*1em 0;
+ 	border-bottom: 1px solid transparentize(#333, 0.9);
+ 	margin-bottom: $golden*1em;
+
+  	// Mobile view
+  	.navigation-menu-button {
+  		display: block;
+  		float: right;
+  		margin: 0;
+  		padding-top: 0.5em;
+  		margin-right: $golden*1em;
+
+  		i{
+  			font-size: modular-scale(2);
+  		}
+
+  		@include media ($large-screen) {
+  			display: none;
+  		}
+  	}
+
+  	// Nav menu
+  	.navigation-wrapper {
+  		@include clearfix;
+  		position: relative;
+  	}
+
+  	.logo {
+  		float: left;
+  		width: 60px;
+  		margin-left: 1em*$golden;
+  		margin-right: 1em*$golden;
+
+  		img {
+  			//max-height: 2em;
+  			padding-right: 1em;
+  		}
+  	}
+
+  	nav {
+  		float: none;
+
+  		@include media ($large-screen) {
+  			float: right;
+  			line-height: 1.5em;
+  			padding-top: 0.3em;
+  			padding-right: $golden*1em;
+  		}
+  	}
+
+  	ul.navigation-menu {
+  		clear: both;
+  		display: none;
+  		margin: 0 auto;
+  		overflow: visible;
+  		padding: 0;
+  		width: 100%;
+  		margin-top: 8px;
+
+  		@include media ($large-screen) {
+  			display: block;
+  			margin: 0;
+  			margin-top: 8px;
+  			padding: 0;
+  		}
+
+  		&.show {
+  			display: block;
+  		}
+  	}
+
+  	// Nav items
+  	ul li.menu-item {
+  		display: block;
+  		text-align: right;
+  		width: 100%;
+
+
+  		@include media ($large-screen) {
+  			background: transparent;
+  			display: inline;
+  			text-decoration: none;
+  			width: auto;
+  		}
+  	}
+
+  	li.menu-item a {
+  		display: inline-block;
+
+  		@include media(max-width $large-screen) {
+  			padding-right: $golden*1em;
+  		}
+
+  		@include media ($large-screen) {
+  			padding-right: $golden*1em;
+  		}
+  	}
+  }
+
+/* 
+Footer
+ */
+
+ .footer {
+ 	$large-screen: em(860) !default;
+ 	text-align: center;
+ 	border-top: 1px solid transparentize(#333, 0.9);
+ 	padding: $golden*1em 0;
+ 	margin-top: $golden*1em;
+
+ 	.footer-logo {
+ 		margin-bottom: 1em;
+ 		margin-right: 1em;
+
+ 		@include media($large-screen) {
+ 			//float: left;
+ 			margin-bottom: 0;
+ 		}
+
+ 		img {
+ 			height: 2.2em;
+ 		} 
+ 	}
+
+ 	ul {
+ 		margin: 0;
+ 		padding-left: 0;
+
+ 		@include media($large-screen) {
+ 			//float: left;
+ 			padding-top: 0.3em;
+ 		}
+
+ 		li {
+ 			line-height: 1.5em;
+ 			padding:0 $golden*0.5em;
+ 			display: inline-block;
+
+ 			@include media($large-screen) {
+ 				
+ 				text-align: left;
+ 			}
+ 		}
+ 	}
+ 	.footer-social-icon{
+ 		padding: $golden*0.5em 0;
+ 		a{
+ 			padding: 0  modular-scale(-2,1em,$golden);
+ 		}
+ 	}
+ 	.site-info{
+ 		padding: 1em*$golden 0;
+ 		border-top: 1px solid transparentize(#333, 0.9);
+ 		margin: 0 modular-scale(3,1em,$golden);
+ 		span{
+ 			display: inline-block;
+ 		}
+ 	}
+ }
