--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -47,7 +47,8 @@ a {
   &:active,
   &:focus,
   &:hover {
-    color: shade($action-color, 25%);
+    color: darken($action-color, 5%);
+    text-decoration: underline;
   }
 }
 
