--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -23,7 +23,7 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: #ed8b00/* $blue */;
 
 // Border
 $base-border-color: $light-gray;
